[package]
name = "backendprojek"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0" 
actix-service = "2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7" 
serde_json = "1.0"
bcrypt = "0.12"
lettre = "0.10" 
lettre_email = "0.9"
dotenv = "0.15"
rand = "0.8" 
chrono = "0.4"
futures = "0.3"
uuid = { version = "1.10", features = ["v4"] }
postgres = "0.19"
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls"] }
jsonwebtoken = "8.1.1"  
actix-cors = "0.6"
futures-util = "0.3"